Implemented create special notice scenario. Added support for fields within fieldsets, and setting the current date as data keys.

--- a/src/test/java/uk/gov/dvsa/mot/test/exampleHtml/selectCheckbox-4.html
+++ b/src/test/java/uk/gov/dvsa/mot/test/exampleHtml/selectCheckbox-4.html
@@ -9,7 +9,7 @@
       <div>
         <label>
           <p>other text</p>
-          <input type="checkbox" id="my_input">
+          <input type="checkbox" id="my_input" checked="checked">
           Test Checkbox Button
         </label>
       </div>
