Adding test case for br separated lines

--- a/src/test/resources/exampleHtml/containsMessage-5.html
+++ b/src/test/resources/exampleHtml/containsMessage-5.html
@@ -8,6 +8,10 @@
     <p>You have successfully updated the user: <strong>Fred Bloggs</strong> 'USER023'.</p>
   </div>
 
+  <div>
+    <p>This is a test string <br/> on multiple lines <br> here</p>
+  </div>
+
 
 </body>
 </html>
